Clean up before restructurisation

--- a/src/main/resources/public/techSpec.html
+++ b/src/main/resources/public/techSpec.html
@@ -19,8 +19,8 @@
 <input type="text" id="maket-size" class="data maket-size" placeholder="240x400px" size="40">
 
 <h3>Ориентация макета</h3>
-<p><input type="radio" id="hor" name="orientation" value="horizontal">Горизонтальный</p>
-<p><input type="radio" id="vert" name="orientation" value="vertical">Вертикальный</p>
+<p><input type="radio" id="hor" name="orientation" value="Horizontal">Горизонтальный</p>
+<p><input type="radio" id="vert" name="orientation" value="Vertical">Вертикальный</p>
 
 <h3>Какую задачу должен решить макет</h3>
 <p>Информационная или промо задача</p>
@@ -34,8 +34,8 @@
 <input type="date" id="deadline">
 
 <h3>Требуется ли кнопка</h3>
-<p><input type="radio" id="buttonrequired" name="btnrequirement" value="needBtn">Да</p>
-<p><input type="radio" name="btnrequirement" value="dontNeedBtn">Нет</p>
+<p><input type="radio" id="buttonrequired" name="buttonrequired" value="yes">Да</p>
+<p><input type="radio" id="buttonunpresent" name="buttonrequired" value="no">Нет</p>
 
 <h3>Что пишем на кнопке</h3>
 <input type="text" id="button-text" class="data button-text" placeholder="Например: Смотреть или Узнать больше" size="40">
@@ -54,14 +54,14 @@
 
 <h3>Исходные материалы</h3>
 <p>Изображения, файлы которые вы предоставите для работы</p>
-<p><input type="checkbox" id="vector-logo" name="a">Логотип в векторном формате</p>
-<p><input type="checkbox" name="a">Логотип картинкой</p>
-<p><input type="checkbox" name="a">Фотографии</p>
-<p><input type="checkbox" id="brandbook" name="a">Брендбук</p>
-<p><input type="checkbox" name="a">Иллюстрации</p>
-<p><input type="checkbox" name="a">Фирменные шрифты</p>
+<p><input type="checkbox" id="vector-logo" name="source" value="Vector logo">Логотип в векторном формате</p>
+<p><input type="checkbox" name="source" value="Image logo">Логотип картинкой</p>
+<p><input type="checkbox" name="source" value="Images">Фотографии</p>
+<p><input type="checkbox" id="brandbook" name="source" value="Brandbook">Брендбук</p>
+<p><input type="checkbox" name="source" value="Illustrations">Иллюстрации</p>
+<p><input type="checkbox" name="source" value="Company Typeface">Фирменные шрифты</p>
 
-<h3>Вы подготовили примеры дизайна которые нравятся</h3>
+<h3>Вы подготовили примеры дизайна, которые Вам нравятся?</h3>
 <p>Например доска на pinterest.com</p>
 <p><input type="radio" id="haveExample" name="example" value="yes">Да, я подобрал</p>
 <p><input type="radio" name="example" value="noButReady">Нет, но готов подготовить</p>
