--- a/src/main/resources/public/techSpec.html
+++ b/src/main/resources/public/techSpec.html
@@ -24,7 +24,7 @@
 
 <h3>Какую задачу должен решить макет</h3>
 <p>Информационная или промо задача</p>
-<textarea rows="4" cols="50" id="info-task" class="data info-task" placeholder="Оповестить клиентов о проведении акции"></textarea>
+<textarea rows="4" cols="50" id="info-corporateStyle" class="data info-corporateStyle" placeholder="Оповестить клиентов о проведении акции"></textarea>
 
 <h3>На какой площадке будет размещение макета</h3>
 <textarea rows="4" cols="50" id="platform" class="data platform" placeholder="Слайдер на сайте компании"></textarea>
