Add CorporateStyle table, small fixes, little cleanup

--- a/src/main/resources/public/techSpec.html
+++ b/src/main/resources/public/techSpec.html
@@ -24,7 +24,7 @@
 
 <h3>Какую задачу должен решить макет</h3>
 <p>Информационная или промо задача</p>
-<textarea rows="4" cols="50" id="info-corporateStyle" class="data info-corporateStyle" placeholder="Оповестить клиентов о проведении акции"></textarea>
+<textarea rows="4" cols="50" id="info-task" class="data info-corporateStyle" placeholder="Оповестить клиентов о проведении акции"></textarea>
 
 <h3>На какой площадке будет размещение макета</h3>
 <textarea rows="4" cols="50" id="platform" class="data platform" placeholder="Слайдер на сайте компании"></textarea>
@@ -63,7 +63,7 @@
 
 <h3>Вы подготовили примеры дизайна, которые Вам нравятся?</h3>
 <p>Например доска на pinterest.com</p>
-<p><input type="radio" id="haveExample" name="example" value="yes">Да, я подобрал</p>
+<p><input type="radio" id="exampleYes" name="example" value="yes">Да, я подобрал</p>
 <p><input type="radio" name="example" value="noButReady">Нет, но готов подготовить</p>
 <p><input type="radio" name="example" value="no">Нет</p>
 
