Add pages for templates

--- a/src/main/resources/public/corporateStyleTemplate.html
+++ b/src/main/resources/public/corporateStyleTemplate.html
@@ -5,8 +5,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <title>Technical specification</title>
 </head>
+<body>
 <p>
-<h1>Welcome to Technical specification generator!</h1>
+<h1>Корпоративный стиль</h1>
 
 <button id="fillData">Заполнить поля</button>
 <button id="performPdf">Сформировать моё техзадание</button>
