--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -31,7 +31,7 @@
 
 <script>
 function redirectToForm() {
-  location.replace("techSpec.html")
+  location.replace("chooseTemplate.html")
 }
 </script>
 
