--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Technical specification</title>
+    <title>Генератор тех заданий</title>
 </head>
 <body>
-<h1>Welcome to Technical specification generator!</h1>
-<h3>Please, enter your name and e-mail</h3>
+<h1>Добро пожаловать на генератор Тех заданий!</h1>
+<h3>Пожалйуста, введите имя и электронную почту</h3>
 
 <table>
     <tbody>
     <tr>
-        <p>Your name:</p>
+        <p>Ваше имя:</p>
     </tr>
     <tr>
         <input type="text" size="40">
     </tr>
     <tr>
-        <p>Your email:</p>
+        <p>Ваша электронная почта:</p>
     </tr>
     <tr>
         <input type="text" size="40">
