Make generated pdf send back and open in new tab. And minor improvements

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Добро пожаловать на генератор Тех заданий!</h1>
-<h3>Пожалйуста, введите имя и электронную почту</h3>
+<h3>Пожалуйста, введите имя и электронную почту</h3>
 
 <table>
     <tbody>
