--- a/src/main/resources/public/logoTemplate.html
+++ b/src/main/resources/public/logoTemplate.html
@@ -6,20 +6,59 @@
     <title>Логотип</title>
 </head>
 <body>
-<h1>Логотип</h1>
+<h1>Бриф на создание логотипа</h1>
 
 <button id="logo-fill-data">Заполнить поля</button>
 <button id="logo-perform-pdf">Сформировать моё техзадание</button>
 <button onclick="redirectToChooseTemplate()">Назад</button>
 
-<p>Укажите название логотипа</p>
-<input type="text" id="logo-name" class="data logo-name" placeholder="Бип-логотип" size="40">
+<h2>О Компании</h2>
+<p>Название компании</p>
+<input type="text" id="company-name" class="data company-name" placeholder="Компания" size="40">
 
-<p>Укажите размер логотипа</p>
-<input type="text" id="logo-size" class="data logo-size" placeholder="128x128" size="40">
+<p>Веб сайт</p>
+<input type="text" id="web-site" class="data web-site" placeholder="company.com" size="40">
 
-<p>Укажите формат логотипа</p>
-<input type="text" id="logo-format" class="data logo-format" placeholder=".png" size="40">
+<p>Чем занимается Ваша компания</p>
+<input type="text" id="business-details" class="data business-details" placeholder="Печать широкоформатных баннеров" size="40">
+
+<p>Какая сильная сторона Вашей компании и продукта?</p>
+<input type="text" id="company-strength" class="data company-strength" placeholder="Уникальный продукт на рынке. Большая клиентская база по всему СНГ" size="40">
+
+<p>Если Вы знаете, укажите основных конкурентов</p>
+<input type="text" id="opponents" class="data opponents" placeholder="company-analogue.com; small-company.com" size="40">
+
+<h2>Точный текст для использования в логотипе</h2>
+<p>Русское написание логотипа</p>
+<input type="text" id="logo_rus" class="data logo_rus" placeholder="Компания-лого" size="40">
+
+<p>Английское написание логотипа</p>
+<input type="text" id="logo_eng" class="data logo_eng" placeholder="Company-logo" size="40">
+
+<p>Есть ли уже логотип и требуется ли использование его идеи при разработке нового логотипа?</p>
+<input type="text" id="logo_exists" class="data logo_exists" placeholder="Есть прототип, прошу использовать при создании логотипа" size="40">
+
+
+<p>Желаемая стилистика логотипа</p>
+<p><input type="checkbox" name="style" value="Minimalism">Минимализм</p>
+<p><input type="checkbox" name="style" value="Font_writing">Шрифтовое написание</p>
+<p><input type="checkbox" name="style" value="Elegant">Изящный</p>
+<p><input type="checkbox" name="style" value="Pseudo_emblem">Псевдогербовый</p>
+<p><input type="checkbox" name="style" value="Cubism">Кубизм, мозаика</p>
+<p><input type="checkbox" name="style" value="Retro">Ретро, винтаж</p>
+<p><input type="checkbox" name="style" value="Other">Другое</p>
+<input type="text" id="style_other" class="data style_other" placeholder="Стилистика логотипа" style="display:block" size="40">
+
+<h2>Предпочтения по шрифтам текстовой информации</h2>
+<p><input type="radio" name="example" value="no">С засечками</p>
+<p><input type="radio" name="example" value="no">Рубленый без засечек</p>
+<p><input type="radio" name="example" value="no">Декоративный</p>
+<p><input type="radio" name="example" value="no">Рукописный</p>
+<p><input type="radio" name="example" value="no">Каллиграфия, леттеринг</p>
+<p><input type="radio" name="example" value="no">Готический</p>
+<p><input type="radio" name="example" value="no">Старославянский</p>
+<p><input type="radio" name="example" value="no">Другое</p>
+
 
 <script type="text/javascript" src="/js/perform.js"></script>
 
